Update landing page content and translations for clarity and consistency
- Adjusted heading sizes and improved text clarity on the landing page.
- Revised English and French locale files to enhance descriptions, titles, and subtitles for better understanding of the product.
- Ensured consistent terminology across both languages to improve user experience.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,147 +6,147 @@ en:
 
   layouts:
     landing:
-      title: "Spylitic - Understand why ads work"
-      meta_description: "Competitive Ad Intelligence powered by AI. Across Facebook & TikTok — before you spend a dollar."
+      title: "Spylitic - Competitive Ad Intelligence, explained by AI"
+      meta_description: "Explainable Ad Intelligence for global markets. Understand why ads work before you spend a dollar."
     navbar:
-      problem: "Le problème"
-      solution: "La solution"
-      features: "Fonctionnalités"
-      audience: "Pour qui ?"
+      problem: "Problem"
+      solution: "Solution"
+      features: "Features"
+      audience: "Who is it for?"
       explore_ads: "Explore ads"
       join_early_access: "Join early access"
     footer:
-      tagline: "Competitive Ad Intelligence powered by AI. Comprenez enfin pourquoi les publicités de vos concurrents fonctionnent."
-      platforms_heading: "Plateformes"
+      tagline: "Competitive Ad Intelligence, explained by AI. Understand why competitor ads work."
+      platforms_heading: "Platforms"
       meta_ads: "Meta Ads"
       tiktok_ads: "TikTok Ads"
       google_ads: "Google Ads"
       pinterest_ads: "Pinterest Ads"
       soon_badge: "SOON"
-      legal_heading: "Légal"
-      privacy: "Confidentialité"
-      terms: "CGU"
-      legal_notice: "Mentions Légales"
-      copyright: "© %{year} Spylitic. 100% légal & transparent."
+      legal_heading: "Legal"
+      privacy: "Privacy"
+      terms: "Terms"
+      legal_notice: "Legal Notice"
+      copyright: "© %{year} Spylitic. 100% legal & transparent."
       crafted_for: "Handcrafted for Growth Marketers."
 
   landing:
-    page_title: "Spylitic - Understand why ads work"
+    page_title: "Spylitic - Competitive Ad Intelligence, explained by AI"
     hero:
-      badge: "Competitive Ad Intelligence powered by IA"
+      badge: "Competitive Ad Intelligence, explained by AI"
       title: "Understand"
       title_highlight: "why ads work."
-      subtitle: "Across Facebook & TikTok — before you spend a dollar. Analyse les publicités de tes concurrents, détecte les CTA, les angles marketing et les patterns gagnants."
+      subtitle: "Explain why competitor ads work with transparent AI analysis across Meta, TikTok, and emerging markets. Detect CTAs, angles, and repeatable patterns."
       cta_explore: "Explore ads"
       cta_early_access: "Request early access"
-      legal: "100% légal"
-      public_data: "Données publiques"
-      no_meta: "Sans connexion Meta"
+      legal: "100% legal"
+      public_data: "Public data"
+      no_meta: "No Meta connection"
       image_alt: "Spylitic Intelligence Dashboard"
     problem:
-      title: "Le problème"
-      subtitle: "Aujourd'hui, la plupart des outils vous mentent ou vous noient."
-      result: "Résultat : tu dépenses ton budget Ads à l'aveugle."
+      title: "The problem"
+      subtitle: "Most tools show volume, not understanding."
+      result: "Result: you spend ad budget blindly and miss the why."
       items:
-        - title: "Pas de contexte"
-          description: "On vous montre des milliers de pubs sans jamais expliquer pourquoi elles sont là."
-        - title: "Winners flous"
-          description: "On vous parle de \"winners\" sans donner les métriques stratégiques derrière."
-        - title: "Silo plateformes"
-          description: "Les outils sont centrés sur une seule plateforme, ignorant l'écosystème global."
-        - title: "Dépenses aveugles"
-          description: "Vous finissez par dépenser votre budget Ads en espérant que ça marche."
+        - title: "Opaque scoring"
+          description: "Scores are hidden or black-boxed, so you cannot trust decisions."
+        - title: "No explanation"
+          description: "You see ads but never the copy logic, CTA, or angle behind them."
+        - title: "Dropshipping bias"
+          description: "Most databases are tuned for product hunters, not SaaS or services."
+        - title: "Missing markets"
+          description: "Emerging markets like Africa and LATAM are ignored."
     solution:
-      title: "La solution : Spylitic"
-      intro: "Spylitic est une plateforme d'intelligence publicitaire multi-plateformes. Nous analysons Facebook, Instagram et TikTok pour vous."
-      tagline_not_spy: "Pas du \"spy\"."
-      tagline_understanding: "De la compréhension stratégique."
+      title: "The solution: Spylitic"
+      intro: "Spylitic is a competitive ad intelligence platform that explains why ads work across markets and industries."
+      tagline_not_spy: "Not an Ad Spy."
+      tagline_understanding: "Explainable competitive intelligence."
       image_alt: "AI Analysis Engine"
       items:
-        - title: "Ce qui est dit"
-          description: "Analyse sémantique et textuelle."
-        - title: "Comment c'est dit"
-          description: "Détection du ton et de l'intention."
-        - title: "Pourquoi ça marche"
-          description: "Explication des angles marketing."
-        - title: "Où et pour qui"
-          description: "Insights démographiques et géographiques."
+        - title: "What works"
+          description: "Identify the strongest hooks, CTAs, and formats."
+        - title: "Why it works"
+          description: "Transparent AI explains the logic behind performance."
+        - title: "Where it works"
+          description: "Geo and audience insights by country and niche."
+        - title: "How to act"
+          description: "Turn learnings into strategy, not guesswork."
     features:
-      title: "Ce que Spylitic analyse"
-      subtitle: "Notre IA décompose chaque publicité comme un expert marketing."
+      title: "What Spylitic analyzes"
+      subtitle: "Explainable AI breaks down each ad like a strategist."
       cta_intelligence:
         title: "CTA Intelligence"
         list:
-          - "Détection automatique des CTA utilisés"
-          - "Répartition par pays et langues"
-          - "Objectifs (lead, vente, app, trafic)"
+          - "Detect CTA usage across industries"
+          - "Compare CTA performance by country and language"
+          - "Map CTA intent (lead, sale, app, traffic)"
       copy_decomposition:
         title: "Copy Decomposition"
         labels:
           - "Hook"
-          - "Problème"
-          - "Promesse"
-          - "Preuve"
+          - "Problem"
+          - "Promise"
+          - "Proof"
           - "Call-to-Action"
       ad_angle:
         title: "Ad Angle Detection"
         angles:
-          - "Urgence"
-          - "Preuve sociale"
-          - "Autorité"
-          - "Prix / offre"
+          - "Urgency"
+          - "Social proof"
+          - "Fear"
+          - "Authority"
       longevity:
         title: "Ad Longevity Score"
-        description: "Plus une pub dure, plus elle est stratégiquement intéressante."
-        short: "7 JOURS"
-        long: "90 JOURS +"
+        description: "If an ad runs for 90 days, it is not luck. It is signal."
+        short: "7 DAYS"
+        long: "90 DAYS +"
     example_insight:
-      title: "Exemple d'insight Spylitic"
+      title: "Spylitic insight example"
       platform_label: "Platform"
       platform_value: "TikTok"
       ad_score_label: "Ad Score"
       ad_score_value: "79 / 100"
-      angle_label: "Angle dominant :"
-      angle_value: "Lifestyle + FOMO"
-      cta_label: "CTA :"
-      cta_value: "Shop now"
-      ton_label: "Ton :"
-      ton_value: "Rapide, émotionnel"
-      duration_label: "Durée active :"
-      duration_value: "46 jours"
-      conclusion: "Probablement optimisée pour de l'acquisition rapide mobile."
+      angle_label: "Primary angle:"
+      angle_value: "Authority + Proof"
+      cta_label: "CTA:"
+      cta_value: "Book a demo"
+      ton_label: "Tone:"
+      ton_value: "Direct, credible"
+      duration_label: "Active duration:"
+      duration_value: "92 days"
+      conclusion: "Long-lived ad suggests a scalable positioning in B2B fintech."
       image_alt: "Insight Analysis Example"
     audience:
-      title: "Pour qui est Spylitic ?"
-      subtitle: "Si tu fais de la publicité sur plusieurs plateformes, Spylitic est pour toi."
+      title: "Who is Spylitic for?"
+      subtitle: "Built for serious marketers, not product hunters."
       items:
-        - "Fondateurs SaaS"
+        - "SaaS founders"
         - "Growth marketers"
-        - "Agences marketing"
-        - "Copywriters"
-        - "Marques e-com"
-        - "Business World"
+        - "Marketing agencies"
+        - "Fintech / Edtech / Ecommerce"
+        - "Local brands in Africa, Europe, LATAM"
+        - "Freelance ads & copywriters"
     cross_platform:
-      title: "Cross-Platform Insights"
-      body: "Ce qui marche sur Facebook ≠ TikTok. Spylitic vous aide à adapter vos messages par plateforme en analysant les différences de ton, de rythme et de formats."
+      title: "Geo Ad Insight"
+      body: "What works in Nigeria is not what works in France or the US. Spylitic compares tone, format, and CTA patterns across markets."
       meta_label: "Meta"
       meta_sublabel: "FACEBOOK & INSTA"
       tiktok_label: "TikTok"
       tiktok_sublabel: "MOBILE FIRST"
-      legal_badge: "CONFORME"
-      legal_title: "100 % légal & transparent"
+      legal_badge: "COMPLIANT"
+      legal_title: "100% legal & transparent"
       legal_items:
-        - "Données publiques uniquement"
-        - "Aucune donnée privée"
-        - "Aucune connexion aux comptes Ads"
-        - "Conforme aux règles Meta & TikTok"
+        - "Public data only"
+        - "No private data"
+        - "No connection to ad accounts"
+        - "Compliant with Meta & TikTok rules"
     final_cta:
-      title: "Commencez maintenant"
-      subtitle: "Stop guessing. Start understanding ads."
-      box_title: "Join Early Access"
+      title: "Start with clarity"
+      subtitle: "Competitive Ad Intelligence, explained by AI."
+      box_title: "Get early access"
       bullets:
-        - "Accès anticipé exclusif"
-        - "Feedback direct avec l'équipe"
-        - "Pricing préférentiel à vie"
-        - "Influence sur la roadmap"
-      button: "Join early access"
+        - "Priority early access"
+        - "Direct feedback loop with the team"
+        - "Flexible pricing for early adopters"
+        - "Influence the roadmap"
+      button: "Request early access"
