--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -6,8 +6,8 @@ fr:
 
   layouts:
     landing:
-      title: "Spylitic - Comprenez pourquoi les pubs fonctionnent"
-      meta_description: "Intelligence publicitaire compétitive propulsée par l'IA. Facebook & TikTok — avant de dépenser un euro."
+      title: "Spylitic - Intelligence publicitaire compétitive expliquée par l'IA"
+      meta_description: "Intelligence publicitaire explicable pour les marchés globaux. Comprenez pourquoi les pubs fonctionnent avant de dépenser un euro."
     navbar:
       problem: "Le problème"
       solution: "La solution"
@@ -16,7 +16,7 @@ fr:
       explore_ads: "Explorer les pubs"
       join_early_access: "Rejoindre l'accès anticipé"
     footer:
-      tagline: "Intelligence publicitaire compétitive propulsée par l'IA. Comprenez enfin pourquoi les publicités de vos concurrents fonctionnent."
+      tagline: "Intelligence publicitaire compétitive expliquée par l'IA. Comprenez pourquoi les pubs de vos concurrents fonctionnent."
       platforms_heading: "Plateformes"
       meta_ads: "Meta Ads"
       tiktok_ads: "TikTok Ads"
@@ -31,12 +31,12 @@ fr:
       crafted_for: "Conçu pour les growth marketers."
 
   landing:
-    page_title: "Spylitic - Comprenez pourquoi les pubs fonctionnent"
+    page_title: "Spylitic - Intelligence publicitaire compétitive expliquée par l'IA"
     hero:
-      badge: "Intelligence publicitaire compétitive propulsée par l'IA"
+      badge: "Intelligence publicitaire compétitive expliquée par l'IA"
       title: "Comprenez"
       title_highlight: "pourquoi les pubs fonctionnent."
-      subtitle: "Facebook & TikTok — avant de dépenser un euro. Analysez les publicités de vos concurrents, détectez les CTA, les angles marketing et les patterns gagnants."
+      subtitle: "Expliquez pourquoi les pubs concurrentes fonctionnent grâce à une IA transparente sur Meta, TikTok et les marchés émergents. Détectez CTA, angles et patterns récurrents."
       cta_explore: "Explorer les pubs"
       cta_early_access: "Demander l'accès anticipé"
       legal: "100 % légal"
@@ -45,43 +45,43 @@ fr:
       image_alt: "Tableau de bord Spylitic"
     problem:
       title: "Le problème"
-      subtitle: "Aujourd'hui, la plupart des outils vous mentent ou vous noient."
-      result: "Résultat : tu dépenses ton budget Ads à l'aveugle."
+      subtitle: "La plupart des outils montrent du volume, pas de la compréhension."
+      result: "Résultat : tu dépenses ton budget Ads à l'aveugle et sans explication."
       items:
-        - title: "Pas de contexte"
-          description: "On vous montre des milliers de pubs sans jamais expliquer pourquoi elles sont là."
-        - title: "Winners flous"
-          description: "On vous parle de \"winners\" sans donner les métriques stratégiques derrière."
-        - title: "Silo plateformes"
-          description: "Les outils sont centrés sur une seule plateforme, ignorant l'écosystème global."
-        - title: "Dépenses aveugles"
-          description: "Vous finissez par dépenser votre budget Ads en espérant que ça marche."
+        - title: "Scoring opaque"
+          description: "Scores cachés ou boîtes noires, donc peu fiables."
+        - title: "Pas d'explication"
+          description: "On voit la pub, pas la logique du copy, du CTA ou de l'angle."
+        - title: "Biais dropshipping"
+          description: "Les bases sont pensées pour les produits, pas le SaaS ni les services."
+        - title: "Marchés ignorés"
+          description: "Afrique et LATAM sont souvent absents des analyses."
     solution:
       title: "La solution : Spylitic"
-      intro: "Spylitic est une plateforme d'intelligence publicitaire multi-plateformes. Nous analysons Facebook, Instagram et TikTok pour vous."
-      tagline_not_spy: "Pas du \"spy\"."
-      tagline_understanding: "De la compréhension stratégique."
+      intro: "Spylitic est une plateforme d'intelligence publicitaire qui explique pourquoi les pubs fonctionnent, par marché et par industrie."
+      tagline_not_spy: "Pas un Ad Spy."
+      tagline_understanding: "De l'intelligence explicable."
       image_alt: "Moteur d'analyse IA"
       items:
-        - title: "Ce qui est dit"
-          description: "Analyse sémantique et textuelle."
-        - title: "Comment c'est dit"
-          description: "Détection du ton et de l'intention."
+        - title: "Ce qui marche"
+          description: "Identifiez hooks, CTA et formats dominants."
         - title: "Pourquoi ça marche"
-          description: "Explication des angles marketing."
-        - title: "Où et pour qui"
-          description: "Insights démographiques et géographiques."
+          description: "L'IA explique la logique derrière la performance."
+        - title: "Où ça marche"
+          description: "Insights géo et audience par pays et niche."
+        - title: "Comment agir"
+          description: "Transformez les insights en stratégie."
     features:
       title: "Ce que Spylitic analyse"
-      subtitle: "Notre IA décompose chaque publicité comme un expert marketing."
+      subtitle: "Une IA explicable qui décompose chaque pub comme un stratège."
       cta_intelligence:
         title: "CTA Intelligence"
         list:
-          - "Détection automatique des CTA utilisés"
-          - "Répartition par pays et langues"
-          - "Objectifs (lead, vente, app, trafic)"
+          - "Détection des CTA par industrie"
+          - "Comparaison par pays et langues"
+          - "Intentions CTA (lead, vente, app, trafic)"
       copy_decomposition:
-        title: "Décomposition du copy"
+        title: "Copy Decomposition"
         labels:
           - "Hook"
           - "Problème"
@@ -89,46 +89,46 @@ fr:
           - "Preuve"
           - "Call-to-Action"
       ad_angle:
-        title: "Détection des angles publicitaires"
+        title: "Ad Angle Detection"
         angles:
           - "Urgence"
           - "Preuve sociale"
+          - "Peur"
           - "Autorité"
-          - "Prix / offre"
       longevity:
-        title: "Score de longévité"
-        description: "Plus une pub dure, plus elle est stratégiquement intéressante."
+        title: "Ad Longevity Score"
+        description: "Si une pub tourne 90 jours, ce n'est pas un hasard."
         short: "7 JOURS"
         long: "90 JOURS +"
     example_insight:
       title: "Exemple d'insight Spylitic"
       platform_label: "Plateforme"
       platform_value: "TikTok"
-      ad_score_label: "Score pub"
+      ad_score_label: "Ad Score"
       ad_score_value: "79 / 100"
       angle_label: "Angle dominant :"
-      angle_value: "Lifestyle + FOMO"
+      angle_value: "Autorité + Preuve"
       cta_label: "CTA :"
-      cta_value: "Acheter maintenant"
+      cta_value: "Demander une démo"
       ton_label: "Ton :"
-      ton_value: "Rapide, émotionnel"
+      ton_value: "Direct, crédible"
       duration_label: "Durée active :"
-      duration_value: "46 jours"
-      conclusion: "Probablement optimisée pour l'acquisition rapide mobile."
+      duration_value: "92 jours"
+      conclusion: "Longévité élevée, signe d'un positionnement scalable en fintech B2B."
       image_alt: "Exemple d'analyse d'insight"
     audience:
       title: "Pour qui est Spylitic ?"
-      subtitle: "Si tu fais de la publicité sur plusieurs plateformes, Spylitic est pour toi."
+      subtitle: "Pensé pour les pros de la croissance, pas pour les chasseurs de produits."
       items:
         - "Fondateurs SaaS"
-        - "Growth marketers"
         - "Agences marketing"
-        - "Rédacteurs"
-        - "Marques e-com"
-        - "Business World"
+        - "Growth marketers"
+        - "Fintech / Edtech / Ecommerce"
+        - "Marques locales en Afrique, Europe, LATAM"
+        - "Freelancers Ads / Copywriters"
     cross_platform:
-      title: "Insights multi-plateformes"
-      body: "Ce qui marche sur Facebook ≠ TikTok. Spylitic vous aide à adapter vos messages par plateforme en analysant les différences de ton, de rythme et de formats."
+      title: "Geo Ad Insight"
+      body: "Ce qui marche au Nigeria n'est pas ce qui marche en France ou aux USA. Spylitic compare ton, format et CTA par marché."
       meta_label: "Meta"
       meta_sublabel: "FACEBOOK & INSTA"
       tiktok_label: "TikTok"
@@ -141,12 +141,12 @@ fr:
         - "Aucune connexion aux comptes Ads"
         - "Conforme aux règles Meta & TikTok"
     final_cta:
-      title: "Commencez maintenant"
-      subtitle: "Arrêtez de deviner. Comprenez les pubs."
-      box_title: "Rejoindre l'accès anticipé"
+      title: "Commencez avec de la clarté"
+      subtitle: "Intelligence publicitaire compétitive expliquée par l'IA."
+      box_title: "Accès anticipé"
       bullets:
-        - "Accès anticipé exclusif"
-        - "Feedback direct avec l'équipe"
-        - "Tarifs préférentiels à vie"
+        - "Accès anticipé prioritaire"
+        - "Boucle de feedback directe avec l'équipe"
+        - "Tarifs flexibles pour les early adopters"
         - "Influence sur la roadmap"
-      button: "Rejoindre l'accès anticipé"
+      button: "Demander l'accès"
