--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -150,3 +150,18 @@ fr:
         - "Tarifs flexibles pour les early adopters"
         - "Influence sur la roadmap"
       button: "Demander l'accès"
+    faq:
+      title: "FAQ — Spylitic"
+      items:
+        - question: "Qu’est-ce que Spylitic exactement ?"
+          answer: "Spylitic est une plateforme d’intelligence publicitaire qui analyse les publicités publiques diffusées sur Facebook, Instagram et TikTok. Elle t’aide à comprendre pourquoi certaines publicités fonctionnent : CTA, angles marketing, structure du message, ton et durée de diffusion — expliqués par l’IA."
+        - question: "Spylitic est-il un outil “Ad Spy” ?"
+          answer: "Non. Spylitic ne se contente pas de lister des publicités. Il transforme les annonces publiques en insights compréhensibles et actionnables, pensés pour les fondateurs, agences et marketers."
+        - question: "Quelles plateformes sont supportées ?"
+          answer: "Actuellement : Facebook, Instagram et TikTok. D’autres plateformes (Google, Pinterest, YouTube Ads) sont prévues dans la roadmap."
+        - question: "D’où proviennent les données analysées ?"
+          answer: "Spylitic utilise uniquement des données publiques, issues de bibliothèques officielles et de sources accessibles légalement. Aucune donnée privée ou confidentielle n’est utilisée."
+        - question: "Est-ce légal d’utiliser Spylitic ?"
+          answer: "Oui. Spylitic respecte strictement les règles de Meta et TikTok : pas d’accès aux comptes Ads, pas de données personnelles, pas de scraping interdit."
+        - question: "À qui s’adresse Spylitic ?"
+          answer: "Spylitic est conçu pour : Fondateurs SaaS, Agences marketing, Growth marketers, Copywriters & media buyers, Marques e-commerce et mobile. Si tu veux comprendre avant de dépenser, Spylitic est pour toi."
