fix: refine landing page styles and content for clarity and consistency
- Updated CSS to use fallback colors for better compatibility and visual consistency.
- Changed background styles to utilize new CSS variables for improved design.
- Removed commented-out badge section in the HTML for a cleaner layout.
- Enhanced English and French locale files with updated title highlights for clarity.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
     hero:
       badge: "Competitive Ad Intelligence, explained by AI"
       title: "Understand"
-      title_highlight: "why ads work."
+      title_highlight: "why ads work — explained by AI."
       subtitle: "Explain why competitor ads work with transparent AI analysis across Meta, TikTok, and emerging markets. Detect CTAs, angles, and repeatable patterns."
       cta_explore: "Explore ads"
       cta_early_access: "Request early access"
