--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -35,7 +35,7 @@ fr:
     hero:
       badge: "Intelligence publicitaire compétitive expliquée par l'IA"
       title: "Comprenez"
-      title_highlight: "pourquoi les pubs fonctionnent."
+      title_highlight: "pourquoi les pubs fonctionnent — expliqué par l'IA."
       subtitle: "Expliquez pourquoi les pubs concurrentes fonctionnent grâce à une IA transparente sur Meta, TikTok et les marchés émergents. Détectez CTA, angles et patterns récurrents."
       cta_explore: "Explorer les pubs"
       cta_early_access: "Demander l'accès anticipé"
