feat: update English and French locale files with new feature badges and statuses
- Added badges for features and call-to-action sections in both English and French locale files.
- Updated the status for CTA Intelligence to reflect its availability in both languages.
- Enhanced clarity and consistency in feature descriptions to improve user understanding.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,9 +73,12 @@ en:
         - title: "How to act"
           description: "Turn learnings into strategy, not guesswork."
     features:
+      badge: "FEATURES"
       title: "What Spylitic analyzes"
       subtitle: "Explainable AI breaks down each ad like a strategist."
       cta_intelligence:
+        badge: "CTA"
+        status: "Live"
         title: "CTA Intelligence"
         list:
           - "Detect CTA usage across industries"
